move impl on-top-of `reindex-management`